--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ tensorflow
 pillow
 streamlit==1.34.0
 numpy
-opencv-contrib-python==4.5.5
+opencv_python==3.2.0‑cp36‑cp36m‑win_amd64.whl
 uuid
 keras_facenet
 scikit-learn
