--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ streamlit==1.35.0
 tenacity==8.3.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
+tensorflow
 tensorflow-intel==2.16.1
 termcolor==2.4.0
 threadpoolctl==3.5.0
