--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ libclang==18.1.1
 mdurl==0.1.2
 ml-dtypes==0.3.2
 numpy==1.26.4
-opencv-contrib-python-headless==4.9.0.80
+opencv-contrib-python
 opt-einsum==3.3.0
 optree==0.11.0
 pandas==2.2.2
